# ROS-IGTL-Bridge

./: CMakeLists.txt  CMakeLists.txt~  LICENSE.txt  README.md  mainpage.dox  manifest.xml  package.xml  package.xml~
OpenIGTLink/include/: igtlConfigure.h  igtlTypeConfig.h  igtl_typeconfig.h
include/: IGTL_Server.h  IGTL_Server.h~  ROS_IGTL_Bridge.h  ROS_IGTL_Test.h~  ShowPolyData.h~  Testing.h~  igtlnode.h  igtlnode.h~  igtlpolydata.h~  ros_igtl_bridge.h  rosigtlbridge.h~
launch/: bridge.launch  cam.launch~  test.launch  test.launch~  video.ini~  video.launch~
msg/: Item.msg~  igtlimage.msg  igtlimage.msg~  igtlpoint.msg  igtlpoint.msg~  igtlpointcloud.msg  igtlpointcloud.msg~  igtlpolydata.msg  igtlpolydata.msg~  igtlstring.msg  igtlstring.msg~  igtltransform.msg  igtltransform.msg~  vector.msg~
src/: IGTL_Server.cpp  ROS_IGTL_Bridge.cpp  igtlnode.cpp  main.cpp  message_converter_base.h  message_converter_base.tpp  message_converter_base.txx  message_converter_image.cpp  message_converter_image.h  message_converter_point.cpp  message_converter_point.h  message_converter_pointcloud.cpp  message_converter_pointcloud.h  message_converter_polydata.cpp  message_converter_polydata.h  message_converter_string.cpp  message_converter_string.h  message_converter_transform.cpp  message_converter_transform.h  message_converter_video.cpp  message_converter_video.h  rib_converter.h  rib_converter.tpp  rib_converter_base.cpp  rib_converter_base.h  rib_converter_base.tpp  rib_converter_image.cpp  rib_converter_image.h  rib_converter_manager.cpp  rib_converter_manager.h  rib_converter_point.cpp  rib_converter_point.h  rib_converter_pointcloud.cpp  rib_converter_pointcloud.h  rib_converter_polydata.cpp  rib_converter_polydata.h  rib_converter_string.cpp  rib_converter_string.h  rib_converter_transform.cpp  rib_converter_transform.h  (+3 more)
testing/: ROS_IGTL_Test.cpp  main_test.cpp  ros_igtl_test.cpp
testing/include/: ReadOCTFile.h  ShowPolyData.h  ros_igtl_test.h
